syntax = "proto3";

package todoService;

option go_package = "github.com/Elmar006/todo_grpc/backend/proto/gen/todoService;todoService";

service TodoService {
    rpc CreateTask(CreateTaskRequest) returns (Task);
    rpc GetTask(GetTaskRequest) returns (Task);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (Task);
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    string created_at = 5;
    string update_at = 6;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
}

message GetTaskRequest {
    string id = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message UpdateTaskRequest {
    string id = 1;
    optional string title = 2;
    optional string description = 3;
    optional bool completed = 4;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {}